# SynchronizerMC

./: Cargo.toml  README.md  book.md  config.yml
src/: main.rs  ser_config.rs  yml_util.rs
src/http_server/: http_server.rs
src/server/: mod.rs  mysql_util.rs  ws_server.rs
