[package]
name = "demo_test001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
actix-web = "3"
rand = "0.8.4"
mysql = "20.0.1"
ws = "0.9.2"
rust-crypto = "0.2.36"
tokio = "1.12.0"
rocket = "=0.5.0-rc.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
parking_lot = "0.11"